[package]
name = "rsa_encryption_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
encrypt = "0.1.3"
ethers = "2.0.11"
fnv = "1.0.7"
modinverse = "0.1.1"
modular_equations = "1.0.5"
num-bigint = { version = "0.4.4", features = ['rand'] }
num-integer = "0.1.45"
num-traits = "0.2.17"
primesieve = "0.2.1"
rand = "0.8.5"
rsa = "0.9.4"
sha256 = "1.4.0"
uint = "0.9.5"

# [profile.release]
# overflow-checks = false
