[package]
name = "rsa_encryption_algorithm"
version = "0.1.0"
edition = "2021"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "This is a Rust RSA cryptosystem implementation"
repository = "https://github.com/aagbotemi/rsa-cryptosystem"
keywords = ["rsa", "encryption", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
num-bigint = { version = "0.4.4", features = ['rand'] }
modinverse = "0.1.1"
num-traits = "0.2.17"
